traefik/traefik/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
spec:
  rules:
  - host: traefik-ui.k8s.selit.ru
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: admin
